src/objects/Lodestar_Job__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>C_I_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C&amp;I_Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <label>Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mass_Market_Individual_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass_Market_Individual_Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Muni_Agg_Individual_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Muni_Agg_Individual_Customer</label>
        <type>Checkbox</type>
    </fields>
    <label>Lodestar_Job</label>
</CustomObject>